[project]
name = "pf-memer"
version = "0.1.0"
description = ""
authors = [
    {name = "Hju Kneyck Flores",email = "hjucode@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.65.2,<2.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

